fix header out of page and alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/* Default styles for all screen sizes */
+/** Define styles for all screen sizes */
 
 body {
   font-family: Arial, sans-serif;
@@ -6,10 +6,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   background-color: #c1b8b896;
   color: #252323;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 header,
@@ -19,16 +21,24 @@ footer {
   /* White text color */
   padding: 20px;
   text-align: center;
+  width: 100%;
 }
 
 .power-memory-game {
   text-align: center;
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex: 1 0 auto;
+  width: 100%;
+  background-color: chocolate;
 }
 
 h2 {
   color: #000;
-  /* Black header text color */
+  /** Black header text color */
 }
 
 .cards {
@@ -39,19 +49,17 @@ h2 {
   padding: 10px;
   background-color: #3c90b9;
   border: 2px solid #61adec;
-  /* Add border around all the cards */
+  /** Add border around all the cards */
 }
 
 .card {
   width: 150px;
   height: 100px;
   background-color: #61adec;
-  /**background-image: url('/assets/images/power_card.jpeg');
-  /* Path to the powerball image */
   background-size: cover;
   background-position: center;
   color: #fff;
-  /* White text color */
+  /** White text color */
   font-size: 20px;
   font-weight: bold;
   display: flex;
@@ -61,10 +69,12 @@ h2 {
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 2px solid #2196F3;
-  /* Add border around each card */
+  /** Add border around each card */
 }
+
 .matched {
-  color: #00FF00; /* Green text color for matched cards */
+  color: #00FF00;
+  /** Green text color for matched cards */
 }
 
 button {
@@ -74,7 +84,7 @@ button {
   font-size: 16px;
   background-color: #61adec;
   color: #fff;
-  /* White text color */
+  /** White text color */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -85,9 +95,9 @@ button:hover {
   background-color: #00FF00;
 }
 
-/* Media queries for responsiveness */
+/** Media queries for responsiveness */
 
-/* Tablet */
+/** Tablet */
 @media (max-width: 768px) {
   .cards {
     flex-direction: column;
@@ -101,7 +111,7 @@ button:hover {
   }
 }
 
-/* Mobile */
+/** Mobile */
 @media (max-width: 576px) {
 
   header,
